feat(frontend): add delete button with API integration

--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -12,7 +12,7 @@
 <form>
     <input id="searchName" placeholder="Nom" type="text">
     <input id="searchCity" placeholder="City" type="text">
-    <button id="searchButton">Rechercher</button>
+    <button type="button" id="searchButton" onclick="searchVolunteers()">Rechercher</button>
 </form>
 
     <div id="divContainer"></div>
