add folders scripts , pages etc

--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -3,27 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <title>Mon association</title>
+    <title>Document</title>
 </head>
 <body>
-   <div>
-    <button onclick="addVolunteers()" id="buttonCreateVolunteers">Ajouter un bénévole</button>
-    <form style="display: none;" id="formCreateVolunteers">
-        <input id="create-firstname" placeholder="Nom" type="text" minlength="2" required>
-        <input id="create-lastname" placeholder="Prenom" type="text" minlength="2" required>
-        <input id="create-city" placeholder="ville" type="text" minlength="2" required>
-        <input id="create-password" placeholder="Password" type="password" minlength="8" required>
-        <button type="submit" onclick="validateVolunteers()"> Valider la création</button>
-    </form>
-   </div>
-<form>
-    <input id="searchName" placeholder="Nom" type="text">
-    <input id="searchCity" placeholder="City" type="text">
-    <button type="button" id="searchButton" onclick="searchVolunteers()">Rechercher</button>
-</form>
-
-    <div id="divContainer"></div>
+    
 </body>
 </html>
