add folders, login pages, login script, benevoles pages, benevoles script, fetchs back and front for benevoles login, user , and form index

--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -14,7 +14,7 @@
     <section>
         <div id="btn-container">
             <button id="btn-new-volunteer">Devenir bénévole</button>
-            <button id="btn-connect">S'identifier</button>
+            <a id="btn-connect" href="/adaction-front/pages/login.html">S'identifier</a>
         </div>
     </section>
     <section>
