--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -26,6 +26,11 @@
                 <button type="submit" onclick="validateVolunteers()"> Valider la création</button>
         </form>
     </section>
+    <section>
+        <div id="collect-All">
+            
+        </div>
+    </section>
     <footer>
         <!--  -->
     </footer>
