--- a/adaction-front/pages/association.html
+++ b/adaction-front/pages/association.html
@@ -24,6 +24,8 @@
     <button type="button" id="searchButton" onclick="searchVolunteers()">Rechercher</button>
 </form>
 <!--   -->
-    <div id="divContainer"></div>
+    <div id="divContainer">
+        
+    </div>
 </body>
 </html>
