fix problem with collectes benevoles, and server

--- a/adaction-front/pages/benevole.html
+++ b/adaction-front/pages/benevole.html
@@ -19,6 +19,7 @@
     <section>
         <!-- <h1>Adaction</h1> logo ? -->
         <h2>Mes collectes</h2>
+        <div id="collectes-container"></div>
         <form>
             <label for="date">Collecte du jour:</label>
             <input type="date" id="date" name="date">
