add btn association

--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -15,6 +15,7 @@
         <div id="btn-container">
             <button id="btn-new-volunteer">Devenir bénévole</button>
             <a id="btn-connect" href="/adaction-front/pages/login.html">S'identifier</a>
+            <a id="btn-association" href="/adaction-front/pages/association.html">Association</a>
         </div>
     </section>
     <section>
@@ -28,7 +29,7 @@
     </section>
     <section>
         <div id="collect-All">
-            
+
         </div>
     </section>
     <footer>
