add btn , href, add style , header, nav

--- a/adaction-front/pages/association.html
+++ b/adaction-front/pages/association.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script defer src="/adaction-front/scripts/association.js"></script>
     <title>Mon association</title>
 </head>
 <body>
     <header>
-        <a href="/adaction-front/index.html">Accueil</a>
+        <a class="btn-homepage" href="/adaction-front/index.html">Accueil</a>
     </header>
    <div>
     <button onclick="addVolunteers()" id="buttonCreateVolunteers">Ajouter un bénévole</button>
