--- a/adaction-front/pages/login.html
+++ b/adaction-front/pages/login.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="/adaction-front/scripts/login.js"></script>
     <link rel="stylesheet" href="/adaction-front/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Se connecter</title>
 </head>
 <body>
     <header>
         <h1>Identification</h1>
+        <a class="btn-homepage" href="/adaction-front/index.html">Accueil</a>
     </header>
     <form>
         <input id="firstname-input" placeholder="ton prénom" type="text">
