--- a/adaction-front/pages/benevole.html
+++ b/adaction-front/pages/benevole.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/adaction-front/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script defer src="/adaction-front/scripts/benevole.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon profil</title>
