--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -20,6 +20,8 @@
           <a id="btn-connect" class="btn btn-outline" href="/adaction-front/pages/login.html">Se connecter</a>
           <a id="btn-admin" class="btn btn-outline" href="/adaction-front/pages/association.html">Administrateur</a>
         </nav>
+
+        <p style="color: red;font-size: 40px"> Nombre total de déchets : <span id="totalDechetsAll-span" style="color: red;"> </span></p>
       </header>
     <section>
         
