--- a/adaction-front/pages/benevole.html
+++ b/adaction-front/pages/benevole.html
@@ -13,7 +13,8 @@
         <h1>Dashboard</h1>
         <p>Bonjour <span id="firstname-span"></span></p>
         <p>Votre ID : <span id="uid"></span></p>
-        <p>Ville<span id="city-span"></span></p>
+        <p>Ville : <span id="city-span"></span></p>
+        <p> Nombre total de déchets : <span id="totalDechets-span"> </span></p>
         <button id="btn-modification">Modifier mes informations</button>
         <a id="logout" href="/adaction-front/pages/login.html">Se déconnecter</a>
     </header>
