--- a/adaction-front/pages/login.html
+++ b/adaction-front/pages/login.html
@@ -17,6 +17,7 @@
         <input id="firstname-input" placeholder="ton prénom" type="text">
         <input id="password-input" placeholder="ton mot de passe" type="password">
         <button id="btn-connect">Se connecter</button>
+        <div id="erreur"></div>
     </form>
     <!--   -->
 </body>
