--- a/adaction-front/pages/benevole.html
+++ b/adaction-front/pages/benevole.html
@@ -55,7 +55,7 @@
                 <label for="preservatifs">🤷🏽‍♀️</label>
                 <input type="number" id="quantity-preservatifs" name="quantity" placeholder="0" min="0" step="1">
 
-                <label for="sacs"></label>
+                <label for="sacs">🛍️</label>
                 <input type="number" id="quantity-sacs" name="quantity" placeholder="0" min="0" step="1">
 
 
