--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -67,22 +67,9 @@
           <a id="btn-connect" class="btn btn-outline" href="/adaction-front/pages/login.html">Se connecter</a>
           <a id="btn-admin" class="btn btn-outline" href="/adaction-front/pages/association.html">Administrateur</a>
         </nav>
-
-        <p style="color: red;font-size: 40px"> Nombre total de déchets : <span id="totalDechetsAll-span" style="color: red;"> </span></p>
       </header>
-    <section>
-        
-
-
-        <nav class="actions">
-            <button id="btn-new-volunteer" class="btn">Devenir bénévole</button>
-            <a id="btn-connect" class="btn btn-outline" href="/adaction-front/pages/login.html">Se connecter</a>
-            <a id="btn-admin" class="btn btn-outline" href="/adaction-front/pages/association.html">Administrateur</a>
-        </nav>
     </header>
     <main>
-    <section>
-    </section>
     <section id="section-form">
         <form style="display: none;" id="formCreateVolunteers">
             <h2>Formulaire d'inscription</h2>
@@ -102,9 +89,7 @@
             <h2>
                 Rendez le monde meilleur en chaque petit geste compte !
             </h2>
-            <p>
-            Chaque photo raconte une histoire et un espoir.
-            </p>
+            <p style="color: #2c7a4b;"> Nombre total de déchets collectés par nos bénévoles : <span id="totalDechetsAll-span" style="color:#2c7a4b"> </span></p>
         </div>
         <div id="grid-container">
             <div id="photo">
