--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -12,7 +12,7 @@
     <title>Adaction</title>
 </head>
 
-<body>
+<body class="index">
     <header class="site-header">
         <div class="brand">
             <svg height="3rem" width="3rem" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -80,14 +80,10 @@
             <button type="submit" onclick="validateVolunteers()"> Valider la création</button>
         </form>
     </section>
-    <!-- <section>
-        <div id="collect-All">
-        </div>
-    </section> -->
     <section>
         <div class="text">
             <h2>
-                Rendez le monde meilleur en chaque petit geste compte !
+                Rendez le monde meilleur chaque petit geste compte !
             </h2>
             <p style="color: #2c7a4b;"> Nombre total de déchets collectés par nos bénévoles : <span id="totalDechetsAll-span" style="color:#2c7a4b"> </span></p>
         </div>
@@ -113,12 +109,11 @@
             </div>
     </section>
     </div>
-    <footer>
         <footer class="footer-container">
             <div id="adaction-footer">
                 <h2 class="orange">Adaction</h2>
                 <p>Notre mission est de rendre le monde meilleur<br>
-                    chaque geste compte, rendez le monde meilleur à partir d'aujourd'hui
+                    Rejoignez nous !
                 </p>
                 <div class="social-media">
                     <a id="facebook" href="https://www.facebook.com"><svg xmlns="http://www.w3.org/2000/svg" width="24"
@@ -173,7 +168,6 @@
             </div>
         </main>
         </footer>
-    </footer>
 </body>
 
 </html>
