--- a/adaction-front/pages/login.html
+++ b/adaction-front/pages/login.html
@@ -61,6 +61,7 @@
             <a class="btn" href="/adaction-front/index.html">Accueil</a>
         </nav>
     </header>
+    <main>
     <form class="login-form">
         <h2>Connexion</h2>
         <input id="firstname-input" placeholder="ton prénom" type="text">
@@ -68,21 +69,12 @@
         <button id="btn-connect">Se connecter</button>
         <div id="erreur"></div>
     </form>
-
-
-
-
-
-
-
-
-
-    <footer>
+    </main>
         <footer class="footer-container">
             <div id="adaction-footer">
                 <h2 class="orange">Adaction</h2>
-                <p>Notre mission est de rendre le monde meilleur<br>
-                    chaque geste compte, rendez le monde meilleur à partir d'aujourd'hui
+                  <p>Notre mission est de rendre le monde meilleur<br>
+                    Rejoignez nous !
                 </p>
                 <div class="social-media">
                     <a id="facebook" href="https://www.facebook.com"><svg xmlns="http://www.w3.org/2000/svg" width="24"
@@ -131,12 +123,10 @@
                 <p>
                     116 Rue du Faubourg Saint-Martin <br>
                     75010 Paris, France <br>
-                    Email: contact@adaopte.fr <br>
+                    Email: contact@adaction.fr <br>
                     Tél: +33 1 23 45 67 89
                 </p>
             </div>
-        </main>
         </footer>
-    </footer>
 </body>
 </html>
