--- a/adaction-front/pages/association.html
+++ b/adaction-front/pages/association.html
@@ -91,8 +91,8 @@
         <footer class="footer-container">
             <div id="adaction-footer">
                 <h2 class="orange">Adaction</h2>
-                <p>Notre mission est de rendre le monde meilleur<br>
-                    chaque geste compte, rendez le monde meilleur à partir d'aujourd'hui
+                  <p>Notre mission est de rendre le monde meilleur<br>
+                    Rejoignez nous !
                 </p>
                 <div class="social-media">
                     <a id="facebook" href="https://www.facebook.com"><svg xmlns="http://www.w3.org/2000/svg" width="24"
@@ -141,7 +141,7 @@
                 <p>
                     116 Rue du Faubourg Saint-Martin <br>
                     75010 Paris, France <br>
-                    Email: contact@adaopte.fr <br>
+                    Email: contact@adaction.fr <br>
                     Tél: +33 1 23 45 67 89
                 </p>
             </div>
