--- a/adaction-front/pages/benevole.html
+++ b/adaction-front/pages/benevole.html
@@ -12,7 +12,7 @@
     <title>Mon profil</title>
 </head>
 
-<body>
+<body class="page-benevole">
     <header class="site-header">
         <div class="brand">
             <svg height="3rem" width="3rem" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -186,5 +186,4 @@
         </div>
     </footer>
 </body>
-
 </html>
