prepare to vercel

--- a/adaction-front/index.html
+++ b/adaction-front/index.html
@@ -8,7 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script defer src="/adaction-front/scripts/index.js"></script>
+    <script defer src="/scripts/index.js"></script>
     <title>Adaction</title>
 </head>
 
@@ -64,8 +64,8 @@
       
         <nav class="actions">
           <button id="btn-new-volunteer" class="btn">Devenir bénévole</button>
-          <a id="btn-connect" class="btn btn-outline" href="/adaction-front/pages/login.html">Se connecter</a>
-          <a id="btn-admin" class="btn btn-outline" href="/adaction-front/pages/association.html">Administrateur</a>
+          <a id="btn-connect" class="btn btn-outline" href="/pages/login.html">Se connecter</a>
+          <a id="btn-admin" class="btn btn-outline" href="/pages/association.html">Administrateur</a>
         </nav>
       </header>
     </header>
@@ -89,22 +89,22 @@
         </div>
         <div id="grid-container">
             <div id="photo">
-                <figure id="one"><img src="/adaction-front/images/volunteers.jpg"
+        <figure id="one"><img src="/images/volunteers.jpg"
                         alt="Bénévole">
                 </figure>
-                <figure><img id="two" src="/adaction-front/images/megots.jpg"
+        <figure><img id="two" src="/images/megots.jpg"
                         alt="Mégots"></figure>
-                <figure id="three"><img src="/adaction-front/images/plage.jpg"
+        <figure id="three"><img src="/images/plage.jpg"
                         alt="dechets à la plage"></figure>
-                <figure id="four"><img src="/adaction-front/images/rue.jpg" alt="dechets dans la rue">
+        <figure id="four"><img src="/images/rue.jpg" alt="dechets dans la rue">
                 </figure>
-                <figure id="five"><img src="/adaction-front/images/bouchon.jpg" alt="Bouchons de bouteille">
+        <figure id="five"><img src="/images/bouchon.jpg" alt="Bouchons de bouteille">
                 </figure>
-                <figure id="six"><img src="/adaction-front/images/decheterie.jpg"
+        <figure id="six"><img src="/images/decheterie.jpg"
                         alt="Decheterie"></figure>
-                <figure id="seven"><img src="/adaction-front/images/bouteilles.jpg" alt="Bouteilles">
+        <figure id="seven"><img src="/images/bouteilles.jpg" alt="Bouteilles">
                 </figure>
-                <figure id="eight"><img src="/adaction-front/images/save-the-world.jpg"
+        <figure id="eight"><img src="/images/save-the-world.jpg"
                         alt="sauve le monde"></figure>
             </div>
     </section>
