--- a/adaction-front/pages/association.html
+++ b/adaction-front/pages/association.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/adaction-front/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script defer src="/adaction-front/scripts/association.js"></script>
+    <script defer src="/scripts/association.js"></script>
     <title>Mon association</title>
 </head>
 <body>
@@ -57,7 +57,7 @@
             <h1>Mon association</h1>
         </div>
         <nav class="actions">
-            <a class="btn" href="/adaction-front/index.html">Accueil</a>
+            <a class="btn" href="/index.html">Accueil</a>
         </nav>
     </header>
     <main>
