--- a/adaction-front/pages/faqs.html
+++ b/adaction-front/pages/faqs.html
@@ -81,7 +81,7 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <img src="/adaction-front/images/logo.png" alt="logo" width="48" height="48">
+  <img src="/images/logo.png" alt="logo" width="48" height="48">
       <h1>Adaction</h1>
     </div>
     <div class="actions">
