--- a/adaction-front/pages/login.html
+++ b/adaction-front/pages/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/adaction-front/scripts/login.js"></script>
-    <link rel="stylesheet" href="/adaction-front/style.css">
+    <script defer src="/scripts/login.js"></script>
+    <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Se connecter</title>
 </head>
@@ -58,7 +58,7 @@
         </div>
 
         <nav class="actions">
-            <a class="btn" href="/adaction-front/index.html">Accueil</a>
+            <a class="btn" href="/index.html">Accueil</a>
         </nav>
     </header>
     <main>
