--- a/adaction-front/pages/faqs.html
+++ b/adaction-front/pages/faqs.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ – Adaction</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <style>
     main.faq-page{
       max-width:900px;
